--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 
 files:
-  - source: /dist/stolt
+  - source: /
     destination: /home/ec2-user/server
 
 permissions:
@@ -12,18 +12,14 @@ permissions:
     group: ec2-user
 
 hooks:
-
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
-#      runas: root
   
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
-#      runas: root
 
   ApplicationStart:
     - location: scripts/app_start.sh
       timeout: 300
-#      runas: root
